fixing navbar alignment

--- a/assets/css/accordion.css
+++ b/assets/css/accordion.css
@@ -1,30 +1,26 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
-* {
+/* -----------------------------fonts */
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Dancing+Script:wght@400;500;600;700&family=Darker+Grotesque:wght@300;400;500;600;700;800;900&family=Epilogue:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Monoton&family=Raleway+Dots&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-/* html, body {
-  height: 100%;
-  margin: 0;
 } */
 
-/* body {
-  background: #fafafa;
-  color: #500404;
-  font-family: 'Open Sans', sans-serif;
-} */
 
-/* LIST */
-ul {
-  list-style: none;
-}
 
 /* FORM */
 .content {
-    overflow: none;
-    height: calc(100vh - 100px);
+    overflow: hidden;
+    height: 300px;
+    padding: 15px ;
+    margin: 0;
+    
+
+    -moz-box-shadow:    inset 0px 0px 15px 15px rgb(116, 107, 107);
+    -webkit-box-shadow: inset 0px 0px 15px 15px rgb(116, 107, 107);
+    box-shadow:         inset 0px 0px 15px 15px rgb(116, 107, 107);
+
 }
 
 
@@ -36,37 +32,42 @@ input {
   position: absolute;
   top: -10px;
   left: -10px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 label {
   display: block;
   float: left;
-  height: 60vh;
+  height: 300px;
   width: 40px;
   overflow: hidden;
-  background: #b69671;
+  background: rgb(116, 107, 107);
   text-align: center;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 50px;
   -webkit-transition: background 500ms ease;
   transition: background 500ms ease;
+  font-family: 'Darker Grotesque', sans-serif;
+  border-left: solid 1px rgb(116, 107, 107);
 }
 
 li:nth-child(n) > input + label {
   background: rgba(255, 255, 255, 0.5);
-}
+} 
 
 
 
 label:hover,
 li:nth-child(n) > input + label:hover {
-  background: rgba(184, 92, 31, 0.5);
+  background: brown;
   color: #fff;
   cursor: pointer;
 }
 
 input[type="radio"]:checked ~ label {
-  background: orange;
+  background: rgb(97, 89, 89);
   color: #fff;
   cursor: default !important;
 }
@@ -76,7 +77,7 @@ input[type="radio"]:checked ~ label {
   display: block;
   height: 100%;
   width: 0px;
-  padding: 10px 0;
+  padding: 0;
   float: left;
   overflow: hidden;
   font-sizes: 12px;
@@ -84,6 +85,7 @@ input[type="radio"]:checked ~ label {
   -webkit-transition: all 700ms ease;
   transition: all 700ms ease;
 }
+
 .accslide * {
   padding-left: 20px;
   padding-right: 20px;
@@ -112,31 +114,31 @@ input[type="radio"]:checked ~ label > * {
 }
 
 li:nth-child(1) input[type="radio"]:checked ~ .accslide {
-  width: calc(80% - 160px);
+  width: calc(90% - 160px);
 }
 
 li:nth-child(2) input[type="radio"]:checked ~ .accslide {
-  width: calc(80% - 160px);
+  width: calc(90% - 160px);
 }
 
 li:nth-child(3) input[type="radio"]:checked ~ .accslide {
-  width: calc(80% - 160px);
+  width: calc(90% - 160px);
 }
 
 li:nth-child(4) input[type="radio"]:checked ~ .accslide {
-  width: calc(80% - 160px);
+  width: calc(90% - 160px);
 } 
 
 li:nth-child(5) input[type="radio"]:checked ~ .accslide {
-    width: calc(80% - 160px);
+    width: calc(90% - 160px);
 }
 
 li:nth-child(6) input[type="radio"]:checked ~ .accslide {
-width: calc(80% - 160px);
+width: calc(90% - 160px);
 }
 
 li:nth-child(7) input[type="radio"]:checked ~ .accslide {
-width: calc(80% - 160px);
+width: calc(90% - 160px);
 }
 
 
